force-app/main/default/objects/tdc_tra__Rollup_Log_Detail__c/tdc_tra__Rollup_Log_Detail__c.object-meta.xml
<CustomObject>
    <label>Rollup Log Detail</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rollup Log Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>