force-app/main/default/objects/tdc_tra__Rollup_Log_Detail__c/fields/tdc_tra__Message__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>