force-app/main/default/objects/tdc_tra__Rollup_Log_Detail__c/fields/tdc_tra__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>