force-app/main/default/objects/tdc_tra__Rollup_Log_Detail__c/fields/tdc_tra__Result__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Result__c</fullName>
    <label>Result</label>
    <length>20</length>
    <type>Text</type>
</CustomField>