force-app/main/default/objects/tdc_tra__Rollup_Log_Detail__c/fields/tdc_tra__Rollup_Log__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Rollup_Log__c</fullName>
    <label>Rollup Log</label>
    <referenceTo>tdc_tra__Rollup_Log__c</referenceTo>
    <relationshipLabel>Rollup Log Details</relationshipLabel>
    <relationshipName>Rollup_Log_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>